# vector-compute

./: .gitmodules
cpu-compute/: go.mod  main.go
gpu-compute/: CMakeLists.txt  Makefile
gpu-compute/include/engine/: engine.hpp
gpu-compute/include/engine/garbage_collector/: garbage_collector.hpp
gpu-compute/include/engine/pandora/: pandora.hpp
gpu-compute/include/engine/shaders/: file_loader.hpp  file_path.hpp
gpu-compute/include/engine/vk_toolkit/: vk_toolkit.hpp
gpu-compute/shaders/: test.comp  test.comp.spv  test.frag.spv
gpu-compute/src/: CMakeLists.txt  main.cpp
gpu-compute/src/engine/: engine.cpp
gpu-compute/src/engine/garbage_collector/: garbage_collector.cpp
gpu-compute/src/engine/pandora/: pandora.cpp
gpu-compute/src/engine/shaders/: file_loader.cpp  file_path.cpp
gpu-compute/src/engine/vk_toolkit/: vk_toolkit.cpp
